--- a/index.html
+++ b/index.html
@@ -1,11 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>hoja de vida</title>
+  <script src="https://unpkg.com/feather-icons"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <div class="container">
+    <div class="profile">
+      <div class="profile_container">
+        <div class="profile_profileImg">
+            <img src="imagen/imagen_mari.jpg" alt="Resume_image">
+        </div> 
+        <div>
+          <h1 class="profile_name">
+            <span class="profile_name_lastName">mi hoja de vida</span>
+
+
+          </h1>
+          <p class="profile_title">ingeriera de sistemas en formacion</p>
+          <p class="description profile_description">
+            Soy Marilis Londoño, una estudiante de ingeniería de sistemas, de 19 años apasionada por la tecnología
+             y la innovación. Me considero una persona curiosa y comprometida con el aprendizaje constante, 
+             lo que me ha permitido destacar en mi formación académica y en proyectos que requieren análisis y 
+             resolución de problemas. A pesar de mi corta edad, he demostrado capacidad para adaptarme
+              rápidamente a nuevos retos y trabajar eficientemente tanto de forma individual como en equipo.
+               Mi objetivo es aplicar mis conocimientos para desarrollar soluciones prácticas y
+                sostenibles mientras sigo creciendo profesionalmente en el campo de la ingeniería.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="group-1">
+      <div class="skills">
+        <h3 class="title">Habilidades</h3>
+        <ul class="skills_list description">
+          <li>JavaScript</li>
+            <li>HTML CSS</li>       
+        </ul>
+      </div>
+      <div class="ref">  
+        <div class="ref_item">  
+        </div>
+        <div class="ref_item">
+        </div>
+      </div>
+
+      <div class="edu">
+        <h3 class="title">Educación</h3>
+        <div class="edu_item">
+          <h4 class="item_title">ingenieria de sistemas</h4>
+          <p class="item_subtitle">
+           Universidad libre de barranquilla
+          </p>
+        </div>
+        <div class="edu_item">
+          <h4 class="item_title">ingles</h4>
+          <p class="item_subtitle">
+            alianza canadiense 
+          </p>
+        </div>
+      </div>
+
+      <div class="certification">
+        <h3 class="title">Certificaciones</h3>
+        <div class="certification_item">
+          <p class="item_preTitle">2018</p>
+          <h4 class="item_title">Desarrollador Frontend</h4>
+          <p class="description">
+            Certificación que valida mis habilidades avanzadas en desarrollo frontend y creación de interfaces de usuario atractivas y responsivas.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="group-2">
+      <div class="exp">
+        <h3 class="title">Experiencia Profesional</h3>
+        <div class="exp_item">
+          <p class="item_preTitle">*Diseñadora en edutin academy</p>
+          <p class="item_subtitle">*Desarrollador Frontend</p>
+        </div>
+        <div class="exp_item">
+          <h4 class="item_title">Rashid Software LTD.</h4>
+          <p class="item_subtitle">Desarrollador Frontend</p>
+          <p class="description">
+            Implementé nuevas características y mejoré el rendimiento de aplicaciones web, asegurando la mejor experiencia de usuario posible.
+          </p>
+        </div>
+      </div>
+      <div class="awards">
+        <h3 class="title">Premios</h3>
+        <div class="awards_item">
+          <p class="item_preTitle">2022</p>
+          <h4 class="item_title">Rashid Software LTD.</h4>
+          <p class="description">
+            Reconocimiento por la innovación en proyectos de desarrollo de software, destacando en la creación de soluciones eficientes.
+          </p>
+        </div>
+        <div class="awards_item">
+          <p class="item_preTitle">2023</p>
+          <h4 class="item_title">Rashid Software LTD.</h4>
+          <p class="description">
+            Premio al mejor colaborador del año por mi dedicación y capacidad para liderar iniciativas importantes.
+          </p>
+        </div>
+      </div>
+
+      <div class="interest">
+        <h3 class="title">Intereses</h3>
+        <div class="interest_items">
+          <div class="interest_item">
+            <i data-feather="music"></i>
+            <span>Música</span>
+          </div>
+          <div class="interest_item">
+            <i data-feather="book"></i>
+            <span>libros</span>
+          </div>
+          <div class="interest_item">
+            <i data-feather="map"></i>
+            <span>Viajar</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="group-3">
+      <div class="contact">
+        <h3 class="title">Contacto</h3>
+        <div class="contact_info">
+          </p>
+          <p class="description">
+           3146485337
+          </p>
+          <p class="description">
+           londonomarilis0@gmail
+          </p>
+        </div>
+      </div>
+      <div class="social">
+        <h3 class="title">Redes Sociales</h3>
+        <div class="social_items">
+          <a href="#" target="_b" class="social_item">
+            <i data-feather=></i>
+            <span>https://www.tiktok.com/@londo3005?is_from_webapp=1&sender_device=pc</span>
+          </a>
+          <a href="#" target="_blank" class="social_item">
+            <i data-feather=></i>
+            <span>https://www.instagram.com/marilis.londono/profilecard/?igsh=MTRldHJubnN0ejgxag==</span>
+          </a>
     
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script>
+    feather.replace()
+  </script>
 </body>
+
 </html>
