--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>hoja de vida</title>
-  <script src="https://unpkg.com/feather-icons"></script>
+  <script src="/sesion-16/script.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,8 +15,8 @@
     <div class="profile">
       <div class="profile_container">
         <div class="profile_profileImg">
-            <img src="imagen/imagen_mari.jpg" alt="Resume_image">
-        </div> 
+          <img src="imagen/imagen_mari.jpg" alt="Resume_image">
+        </div>
         <div>
           <h1 class="profile_name">
             <span class="profile_name_lastName">mi hoja de vida</span>
@@ -26,12 +26,12 @@
           <p class="profile_title">ingeriera de sistemas en formacion</p>
           <p class="description profile_description">
             Soy Marilis Londoño, una estudiante de ingeniería de sistemas, de 19 años apasionada por la tecnología
-             y la innovación. Me considero una persona curiosa y comprometida con el aprendizaje constante, 
-             lo que me ha permitido destacar en mi formación académica y en proyectos que requieren análisis y 
-             resolución de problemas. A pesar de mi corta edad, he demostrado capacidad para adaptarme
-              rápidamente a nuevos retos y trabajar eficientemente tanto de forma individual como en equipo.
-               Mi objetivo es aplicar mis conocimientos para desarrollar soluciones prácticas y
-                sostenibles mientras sigo creciendo profesionalmente en el campo de la ingeniería.
+            y la innovación. Me considero una persona curiosa y comprometida con el aprendizaje constante,
+            lo que me ha permitido destacar en mi formación académica y en proyectos que requieren análisis y
+            resolución de problemas. A pesar de mi corta edad, he demostrado capacidad para adaptarme
+            rápidamente a nuevos retos y trabajar eficientemente tanto de forma individual como en equipo.
+            Mi objetivo es aplicar mis conocimientos para desarrollar soluciones prácticas y
+            sostenibles mientras sigo creciendo profesionalmente en el campo de la ingeniería.
           </p>
         </div>
       </div>
@@ -41,11 +41,11 @@
         <h3 class="title">Habilidades</h3>
         <ul class="skills_list description">
           <li>JavaScript</li>
-            <li>HTML CSS</li>       
+          <li>HTML CSS</li>
         </ul>
       </div>
-      <div class="ref">  
-        <div class="ref_item">  
+      <div class="ref">
+        <div class="ref_item">
         </div>
         <div class="ref_item">
         </div>
@@ -56,13 +56,13 @@
         <div class="edu_item">
           <h4 class="item_title">ingenieria de sistemas</h4>
           <p class="item_subtitle">
-           Universidad libre de barranquilla
+            Universidad libre de barranquilla
           </p>
         </div>
         <div class="edu_item">
           <h4 class="item_title">ingles</h4>
           <p class="item_subtitle">
-            alianza canadiense 
+            alianza canadiense
           </p>
         </div>
       </div>
@@ -73,7 +73,8 @@
           <p class="item_preTitle">2018</p>
           <h4 class="item_title">Desarrollador Frontend</h4>
           <p class="description">
-            Certificación que valida mis habilidades avanzadas en desarrollo frontend y creación de interfaces de usuario atractivas y responsivas.
+            Certificación que valida mis habilidades avanzadas en desarrollo frontend y creación de interfaces de
+            usuario atractivas y responsivas.
           </p>
         </div>
       </div>
@@ -90,7 +91,8 @@
           <h4 class="item_title">Rashid Software LTD.</h4>
           <p class="item_subtitle">Desarrollador Frontend</p>
           <p class="description">
-            Implementé nuevas características y mejoré el rendimiento de aplicaciones web, asegurando la mejor experiencia de usuario posible.
+            Implementé nuevas características y mejoré el rendimiento de aplicaciones web, asegurando la mejor
+            experiencia de usuario posible.
           </p>
         </div>
       </div>
@@ -100,7 +102,8 @@
           <p class="item_preTitle">2022</p>
           <h4 class="item_title">Rashid Software LTD.</h4>
           <p class="description">
-            Reconocimiento por la innovación en proyectos de desarrollo de software, destacando en la creación de soluciones eficientes.
+            Reconocimiento por la innovación en proyectos de desarrollo de software, destacando en la creación de
+            soluciones eficientes.
           </p>
         </div>
         <div class="awards_item">
@@ -133,15 +136,21 @@
     <hr>
     <div class="group-3">
       <div class="contact">
-        <h3 class="title">Contacto</h3>
+        <h3 class="title" ">Contacto</h3>
         <div class="contact_info">
           </p>
           <p class="description">
-           3146485337
+            3146485337
           </p>
-          <p class="description">
-           londonomarilis0@gmail
+          <p class="description" onclick="mostrar()">
+            londonomarilis0@gmail
           </p>
+          <div id="enviar" style="display: none;">
+            <p>ingrese su nombre: </p>
+            <input type="text">
+            <p>ingrese su numero de contacto : </p>
+            <input type="email">
+          </div>
         </div>
       </div>
       <div class="social">
@@ -155,7 +164,7 @@
             <i data-feather=></i>
             <span>https://www.instagram.com/marilis.londono/profilecard/?igsh=MTRldHJubnN0ejgxag==</span>
           </a>
-    
+
           </a>
         </div>
       </div>
